--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
+    "react-timer-hook": "^3.0.5",
     "react-toastify": "^8.0.3",
     "react-validation": "^3.0.7",
     "web-vitals": "^2.1.4"
