--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
     "firebase": "^9.10.0",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.4.1",
+    "react-router-prompt": "^0.3.0",
     "react-scripts": "^2.1.3",
     "react-timer-hook": "^3.0.5",
     "react-toastify": "^8.0.3",
     "react-validation": "^3.0.7",
+    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
